unpackaged/main/default/objects/User/fields/APEX_DebugListAuthorization__c.field-meta.xml
<CustomField>
    <fullName>APEX_DebugListAuthorization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apex debug list Authorization, if checked the CPU time will significantly increase and the debug log as well. It gives the user a detail debug logs looping in list.</description>
    <label>APEX_DebugListAuthorization</label>
    <type>Checkbox</type>
</CustomField>