unpackaged/main/default/objects/User/fields/booxiId__c.field-meta.xml
<CustomField>
    <fullName>booxiId__c</fullName>
    <description>Id of Booxi Staff</description>
    <externalId>true</externalId>
    <inlineHelpText>Id of Booxi Staff</inlineHelpText>
    <label>booxi Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>