unpackaged/main/default/objects/User/fields/ByPassTriggers__c.field-meta.xml
<CustomField>
    <fullName>ByPassTriggers__c</fullName>
    <label>By Pass Triggers</label>
    <type>TextArea</type>
</CustomField>