unpackaged/main/default/objects/User/fields/CanCreateUCR__c.field-meta.xml
<CustomField>
    <fullName>CanCreateUCR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can CreateUCR</label>
    <type>Checkbox</type>
</CustomField>