unpackaged/main/default/objects/User/fields/Email_templates__c.field-meta.xml
<CustomField>
    <fullName>Email_templates__c</fullName>
    <label>Email templates</label>
    <type>TextArea</type>
</CustomField>