unpackaged/main/default/objects/User/fields/EmailLanguages__c.field-meta.xml
<CustomField>
    <fullName>EmailLanguages__c</fullName>
    <defaultValue>(&quot;en-US&quot;)</defaultValue>
    <label>Email Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Chinese Simplified</fullName>
            </value>
            <value>
                <fullName>Chinese_Traditional</fullName>
                <label>Chinese Traditional</label>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Portugese</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Thailandese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>