unpackaged/main/default/objects/User/fields/GenesysID__c.field-meta.xml
<CustomField>
    <fullName>GenesysID__c</fullName>
    <description>Unique Identifier of the Genesys User</description>
    <externalId>true</externalId>
    <label>GenesysID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>