unpackaged/main/default/objects/User/fields/Hub__c.field-meta.xml
<CustomField>
    <fullName>Hub__c</fullName>
    <description>Hub the user is working for</description>
    <label>Hub</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>AS</fullName>
            </value>
            <value>
                <fullName>JAPOS1</fullName>
            </value>
            <value>
                <fullName>USANY1</fullName>
            </value>
            <value>
                <fullName>USATO1</fullName>
            </value>
            <value>
                <fullName>KOR</fullName>
            </value>
            <value>
                <fullName>JPN</fullName>
            </value>
            <value>
                <fullName>DEUKO1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>