unpackaged/main/default/objects/User/fields/IsGenericUser__c.field-meta.xml
<CustomField>
    <fullName>IsGenericUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Generic User</label>
    <type>Checkbox</type>
</CustomField>