unpackaged/main/default/objects/User/fields/isIntegrationUser__c.field-meta.xml
<CustomField>
    <fullName>isIntegrationUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isIntegrationUser</label>
    <type>Checkbox</type>
</CustomField>