unpackaged/main/default/objects/User/fields/IsManager__c.field-meta.xml
<CustomField>
    <fullName>IsManager__c</fullName>
    <formula>CONTAINS(Profile.Name , &#39;Manager&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Manager</label>
    <type>Checkbox</type>
</CustomField>