unpackaged/main/default/objects/User/fields/LicenseCustom__c.field-meta.xml
<CustomField>
    <fullName>LicenseCustom__c</fullName>
    <formula>Profile.UserLicense.Name</formula>
    <label>LicenseCustom</label>
    <type>Text</type>
</CustomField>