unpackaged/main/default/objects/User/fields/MutedNotifications__c.field-meta.xml
<CustomField>
    <fullName>MutedNotifications__c</fullName>
    <description>A field containing Ids of CLT Notifications  Ids to Mute in R-Client</description>
    <label>Muted Notifications</label>
    <length>1900</length>
    <type>LongTextArea</type>
</CustomField>