unpackaged/main/default/objects/User/fields/R360ID__c.field-meta.xml
<CustomField>
    <fullName>R360ID__c</fullName>
    <displayFormat>U-{0000000}</displayFormat>
    <label>R360 ID</label>
    <type>AutoNumber</type>
</CustomField>