unpackaged/main/default/objects/User/fields/StaffCode__c.field-meta.xml
<CustomField>
    <fullName>StaffCode__c</fullName>
    <label>Staff Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>