unpackaged/main/default/objects/User/fields/StaffStatus__c.field-meta.xml
<CustomField>
    <fullName>StaffStatus__c</fullName>
    <label>Staff Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>