unpackaged/main/default/objects/User/fields/StoreCode__c.field-meta.xml
<CustomField>
    <fullName>StoreCode__c</fullName>
    <label>Store Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>