unpackaged/main/default/objects/User/fields/TechnicalUser__c.field-meta.xml
<CustomField>
    <fullName>TechnicalUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technical User</label>
    <type>Checkbox</type>
</CustomField>