unpackaged/main/default/objects/User/fields/UCRCreationDate__c.field-meta.xml
<CustomField>
    <fullName>UCRCreationDate__c</fullName>
    <label>UCR Creation Date</label>
    <type>DateTime</type>
</CustomField>