unpackaged/main/default/objects/User/fields/utm_link__c.field-meta.xml
<CustomField>
    <fullName>utm_link__c</fullName>
    <label>utm_link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>