unpackaged/main/default/objects/User/fields/WeChat_Work_User_Id__c.field-meta.xml
<CustomField>
    <fullName>WeChat_Work_User_Id__c</fullName>
    <label>WeChat Work User Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>